--- a/app/src/main/res/layout/activity_add_product.xml
+++ b/app/src/main/res/layout/activity_add_product.xml
@@ -79,7 +79,7 @@
                     android:layout_height="200dp"
                     android:layout_gravity="center"
                     android:layout_margin="8dp"
-                    android:src="@drawable/abaya_hijau" />
+                    android:src="@drawable/image_placeholder" />
 
             </LinearLayout>
         </com.google.android.material.card.MaterialCardView>
@@ -135,7 +135,16 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/sfpro_medium"
                 android:text="@string/worker_product_add_product_information_title"
-                android:textSize="18sp" />
+                android:textSize="22sp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/gilroy_light"
+                android:textStyle="italic"
+                android:layout_marginTop="4dp"
+                android:text="Berikan informasi produk yang yang sesuai dan lengkap, untuk warna berikan format penamaan dengan huruf kapital di awal, contoh : Putih"
+                android:textSize="16sp" />
 
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
@@ -169,13 +178,90 @@
                 android:layout_marginTop="8dp">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/edt_product_size"
+                    android:id="@+id/edt_product_quantity"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:hint="Ukuran" />
+                    android:inputType="number"
+                    android:hint="Jumlah Stok" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:maxLines="1"
+                android:text="Ukuran"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="8dp"
+                android:textSize="18sp"
+                />
+
+            <RadioGroup
+                android:id="@+id/rb_group_size"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <com.google.android.material.radiobutton.MaterialRadioButton
+                    android:id="@+id/rb_size_s"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="S"
+                    android:textSize="16sp"
+                    />
+
+                <com.google.android.material.radiobutton.MaterialRadioButton
+                    android:id="@+id/rb_size_m"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="M"
+                    android:textSize="16sp"
+                    />
+
+                <com.google.android.material.radiobutton.MaterialRadioButton
+                    android:id="@+id/rb_size_l"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="L"
+                    android:textSize="16sp"
+                    />
+
+                <com.google.android.material.radiobutton.MaterialRadioButton
+                    android:id="@+id/rb_size_xl"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="XL"
+                    android:textSize="16sp"
+                    />
+
+                <com.google.android.material.radiobutton.MaterialRadioButton
+                    android:id="@+id/rb_size_xxl"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="XXL"
+                    android:textSize="16sp"
+                    />
+
+                <com.google.android.material.radiobutton.MaterialRadioButton
+                    android:id="@+id/rb_size_allsize"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="All Size"
+                    android:textSize="16sp"
+                    />
+
+            </RadioGroup>
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/btn_save"
+                android:layout_width="match_parent"
+                android:layout_height="62dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="20dp"
+                android:layout_weight="1"
+                android:backgroundTint="@color/black"
+                android:text="Simpan"
+                app:cornerRadius="8dp" />
 
         </LinearLayout>
 
