--- a/app/src/main/res/layout/activity_detail_product.xml
+++ b/app/src/main/res/layout/activity_detail_product.xml
@@ -32,18 +32,11 @@
             android:layout_weight="1"
             android:fontFamily="@font/gilroy_semibold"
             android:text="Detail Produk"
-            android:textAlignment="center"
+            android:textAlignment="textEnd"
             android:textSize="24sp"
             app:layout_constraintStart_toStartOf="@+id/guideline_start"
             app:layout_constraintTop_toTopOf="@+id/guideline_top"
             tools:ignore="RtlCompat" />
-
-        <ImageView
-            android:id="@+id/btn_menu"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_gravity="center"
-            android:src="@drawable/ic_three_dots_vertical" />
     </LinearLayout>
 
     <androidx.core.widget.NestedScrollView
@@ -61,11 +54,12 @@
                 android:id="@+id/iv_product_image"
                 android:layout_width="0dp"
                 android:layout_height="320dp"
+                android:scaleType="centerCrop"
                 android:layout_marginTop="20dp"
-                tools:src="@drawable/abaya_hijau"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                tools:src="@drawable/abaya_hijau" />
 
             <com.google.android.material.card.MaterialCardView
                 android:id="@+id/materialCardView2"
@@ -97,8 +91,8 @@
                         android:ellipsize="end"
                         android:fontFamily="@font/gilroy_bold"
                         android:maxLines="2"
-                        tools:text="Abaya Hijau"
-                        android:textSize="20sp" />
+                        android:textSize="20sp"
+                        tools:text="Abaya Hijau" />
 
                     <TextView
                         android:id="@+id/tv_product_color"
@@ -106,8 +100,8 @@
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="4dp"
                         android:fontFamily="@font/gilroy_regular"
-                        tools:text="Merah"
-                        android:textSize="16sp" />
+                        android:textSize="16sp"
+                        tools:text="Merah" />
 
                     <LinearLayout
                         android:layout_width="wrap_content"
@@ -125,8 +119,8 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/gilroy_semibold"
-                            tools:text="3000"
-                            android:textSize="16sp" />
+                            android:textSize="16sp"
+                            tools:text="3000" />
 
                     </LinearLayout>
 
@@ -152,10 +146,10 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
+                android:layout_marginBottom="40dp"
                 app:layout_constraintBottom_toBottomOf="@id/guideline_bottom"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginBottom="40dp"
                 app:layout_constraintTop_toBottomOf="@+id/textView3"
                 tools:itemCount="2"
                 tools:listitem="@layout/warehouse_detail_product_type" />
@@ -186,25 +180,65 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                app:layout_constraintGuide_begin="20dp"/>
+                app:layout_constraintGuide_begin="20dp" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.core.widget.NestedScrollView>
 
-
-
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab_delete"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginEnd="6dp"
+        android:layout_marginBottom="10dp"
+        android:backgroundTint="@color/soft_red"
+        android:clickable="true"
+        android:contentDescription="Delete Product"
+        android:focusable="true"
+        app:fabCustomSize="50dp"
+        app:maxImageSize="20dp"
+        app:layout_constraintBottom_toTopOf="@+id/fab_edit"
+        app:layout_constraintEnd_toEndOf="@+id/fab_extended"
+        app:layout_constraintStart_toStartOf="@+id/fab_extended"
+        app:srcCompat="@drawable/ic_trash"
+        android:visibility="invisible"
+        app:tint="@color/white" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:layout_width="62dp"
-        android:layout_height="62dp"
-        android:layout_marginBottom="40dp"
+        android:id="@+id/fab_edit"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginEnd="6dp"
+        android:layout_marginBottom="20dp"
+        android:backgroundTint="@color/soft_green"
+        android:clickable="true"
         android:contentDescription="Edit Product"
-        android:src="@drawable/ic_pen"
-        app:tint="@color/white"
+        android:focusable="true"
+        android:visibility="invisible"
+        app:fabCustomSize="50dp"
+        app:layout_constraintBottom_toTopOf="@+id/fab_extended"
+        app:layout_constraintEnd_toEndOf="@+id/fab_extended"
+        app:layout_constraintEnd_toStartOf="@+id/guideline_end_outer"
+        app:layout_constraintStart_toStartOf="@+id/fab_extended"
+        app:maxImageSize="20dp"
+        app:srcCompat="@drawable/ic_pen"
+        app:tint="@color/white" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab_extended"
+        android:layout_width="58dp"
+        android:layout_height="58dp"
+        android:layout_marginBottom="40dp"
         android:backgroundTint="@color/blue_inventory"
+        android:clickable="true"
+        android:contentDescription="Edit Product"
+        android:focusable="true"
+        app:maxImageSize="30dp"
+        android:src="@drawable/ic_add"
         app:layout_constraintBottom_toTopOf="@+id/guideline_bottom_outer"
-        app:layout_constraintEnd_toStartOf="@+id/guideline_end_outer" />
+        app:layout_constraintEnd_toStartOf="@+id/guideline_end_outer"
+        app:tint="@color/white" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline_start_outer"
