--- a/app/src/main/res/layout/warehouse_detail_product_type.xml
+++ b/app/src/main/res/layout/warehouse_detail_product_type.xml
@@ -3,8 +3,9 @@
     android:layout_width="match_parent"
     app:strokeWidth="0dp"
     android:backgroundTint="@color/white"
-    app:cardElevation="4dp"
-    android:layout_height="80dp"
+    app:cardElevation="2dp"
+    android:elevation="8dp"
+    android:layout_height="60dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginStart="20dp"
     android:layout_marginEnd="20dp"
@@ -17,8 +18,8 @@
         android:orientation="horizontal">
 
         <com.google.android.material.card.MaterialCardView
-            android:layout_width="80dp"
-            android:layout_height="80dp"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
             app:strokeWidth="0dp"
             android:backgroundTint="@color/black">
 
@@ -26,7 +27,7 @@
                 android:id="@+id/tv_product_size"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="All Size"
+                android:text="All"
                 android:maxLines="1"
                 android:ellipsize="end"
                 android:textColor="@color/white"
