--- a/app/src/main/res/layout/activity_detail_product.xml
+++ b/app/src/main/res/layout/activity_detail_product.xml
@@ -39,9 +39,24 @@
             tools:ignore="RtlCompat" />
     </LinearLayout>
 
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/lottie_loading_card"
+        android:layout_width="800dp"
+        android:layout_height="0dp"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
+        app:lottie_rawRes="@raw/lottie_loading_card" />
+
     <androidx.core.widget.NestedScrollView
+        android:id="@+id/nestedScrollView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linear_layout_dashboard_and_title">
@@ -54,15 +69,15 @@
                 android:id="@+id/iv_product_image"
                 android:layout_width="0dp"
                 android:layout_height="320dp"
-                android:scaleType="centerCrop"
                 android:layout_marginTop="20dp"
+                android:scaleType="centerCrop"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:src="@drawable/abaya_hijau" />
 
             <com.google.android.material.card.MaterialCardView
-                android:id="@+id/materialCardView2"
+                android:id="@+id/cv_product_detail"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
@@ -129,7 +144,7 @@
             </com.google.android.material.card.MaterialCardView>
 
             <TextView
-                android:id="@+id/textView3"
+                android:id="@+id/tv_product_type"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
@@ -138,7 +153,7 @@
                 android:textSize="18sp"
                 app:layout_constraintEnd_toStartOf="@+id/guideline_end"
                 app:layout_constraintStart_toStartOf="@+id/guideline_start"
-                app:layout_constraintTop_toBottomOf="@+id/materialCardView2" />
+                app:layout_constraintTop_toBottomOf="@+id/cv_product_detail" />
 
 
             <androidx.recyclerview.widget.RecyclerView
@@ -150,7 +165,7 @@
                 app:layout_constraintBottom_toBottomOf="@id/guideline_bottom"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView3"
+                app:layout_constraintTop_toBottomOf="@+id/tv_product_type"
                 tools:itemCount="2"
                 tools:listitem="@layout/warehouse_detail_product_type" />
 
@@ -196,13 +211,13 @@
         android:clickable="true"
         android:contentDescription="Delete Product"
         android:focusable="true"
+        android:visibility="invisible"
         app:fabCustomSize="50dp"
-        app:maxImageSize="20dp"
         app:layout_constraintBottom_toTopOf="@+id/fab_edit"
         app:layout_constraintEnd_toEndOf="@+id/fab_extended"
         app:layout_constraintStart_toStartOf="@+id/fab_extended"
+        app:maxImageSize="20dp"
         app:srcCompat="@drawable/ic_trash"
-        android:visibility="invisible"
         app:tint="@color/white" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -234,10 +249,10 @@
         android:clickable="true"
         android:contentDescription="Edit Product"
         android:focusable="true"
-        app:maxImageSize="30dp"
         android:src="@drawable/ic_add"
         app:layout_constraintBottom_toTopOf="@+id/guideline_bottom_outer"
         app:layout_constraintEnd_toStartOf="@+id/guideline_end_outer"
+        app:maxImageSize="30dp"
         app:tint="@color/white" />
 
     <androidx.constraintlayout.widget.Guideline
